Bug 49709 - : Fields in embedded bibliography gets switched around
Summary: : Fields in embedded bibliography gets switched around
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.3 release
Hardware: Other All
: medium normal
Assignee: David Tardon
URL:
Whiteboard: BSA target:3.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-09 17:10 UTC by k.dalgard
Modified: 2012-07-17 20:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document for Bibliography entry sorting issue in 3.6 Beta 3 (14.17 KB, application/vnd.oasis.opendocument.text)
2012-07-17 20:17 UTC, miker169
Details

Note You need to log in before you can comment on or make changes to this bug.
Description k.dalgard 2012-05-09 17:10:03 UTC
Problem description:
Something strange is going on with the editor.

Steps to reproduce (translated from Danish):
1. Create a new entry and insert it
2. Right click the reference and select Bibliography entry
3. Click Edit and click on any element including the already selected element in the Short name select list

Current behavior:
The data in each field is moved to another field - looks messy but is always the same.

Expected behavior:

Platform (if different from the browser):
Windows 7
Comment 1 k.dalgard 2012-05-09 17:12:25 UTC
(... that is: click on any element in the Short name select list.)
Comment 2 Not Assigned 2012-05-11 03:16:41 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bcbf4b061b2e923c2ff3b222458c286c8fa27a3a

fdo#49709 set updated values to the right entries
Comment 3 miker169 2012-07-17 20:11:46 UTC
I am having a problem when I open a document in 3.6 Beta 3 that was created in version 3.5.4.

My bibliography is number format like [1], [2], [3] etc.

Normally the bibliography table is organised in the order in which the references appear in the document, but with 3.6 Beta 3 it seems they are in the order in which they were created. Also all references numbered greater than 10 are now replaced with [0] both in the document and in the table.

Unfortunately I cannot reproduce this in a fresh document and the (many) documents that it occurs in contain proprietary information that I cannot freely send out.

I can confirm however that 3.5.5 does not corrupt the bibliography in this way.
Comment 4 miker169 2012-07-17 20:17:36 UTC
Created attachment 64329 [details]
Test document for Bibliography entry sorting issue in 3.6 Beta 3

See comment for steps to reproduced
Comment 5 miker169 2012-07-17 20:18:19 UTC
Edit to the above, I now have a test case.

Steps to reproduce

1. Open the attached file in LoDev 3.6Beta3
2. Right click the Bibliography then Update Index/Table
3. The reference numbers are scrambled
4. Open the attached file in LibO 3.5.5
5. Right click the Bibliography then Update Index/Table
6. The reference numbers are correctly sorted