fdo#49709 set updated values to the right entries

Change-Id: I8fc6f7b52b797eefb7276dd73630b235e6918296